# read_rdf

./: .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  globbing_research.md  tests-bad.nq  tests-bad.ttl  tests.nq  tests.ttl  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  debug_windows.yml
docs/: functions.md
src/: CMakeLists-BufferTestHarness.txt  base64.c  byte_source.c  env.c  n3.c  node.c  ntriple_parser.cpp  parse_triple.cpp  parse_triple.hpp  rdf_extension.cpp  rdf_xml_parser.cpp  read_rdf_extension.cpp  reader.c  serd_buffer.cpp  serdi.c  sparql_reader.cpp  string.c  system.c  uri.c  writer.c  xml_buffer.cpp
src/include/: I_triples_buffer.hpp  attributes.h  base64.h  byte_sink.h  byte_source.h  rdf_extension.hpp  rdf_xml_parser.hpp  read_rdf_extension.hpp  reader.h  serd.h  serd_buffer.hpp  serd_config.h  serd_internal.h  sparql_reader.hpp  stack.h  string_utils.h  system.h  try.h  uri_utils.h  warnings.h  xml_buffer.hpp
test/: sample.nt
test/r2rml/: full_r2rml.ttl  inside_out.ttl
test/rdf/: multi_base.ttl  no_base.trig  no_base.ttl  tests-bad-uri.nq  tests-bad-uri.nt  tests-bad-uri.trig  tests-bad-uri.ttl  tests-bad.nt  tests-bad.trig  tests-base.trig  tests-base.ttl  tests.nt  tests.trig  tests_fake.foo  unicode_test.ttl  with_base.trig  with_base.ttl
test/rdf/shards/: shard_a.nt  shard_b.nt
test/sql/: file_type_mismatch.test  file_type_override.test  file_type_unknown.test  glob.test  prefix_expansion.test  projection_pushdown.test  rdf.test  rdf_xml.test  read_rdf.test  read_rdf_base_uri.test  read_rdf_base_uri_trig.test  read_sparql.test  read_sparql_integration.test  sql2rdf.test  strict_parsing.test  write_rdf.test
test/xmlrdf/: example09.nt
vcpkg_overlay_ports/serd/: portfile.cmake  vcpkg.json
